--- a/reset.css
+++ b/reset.css
@@ -1,5 +1,5 @@
 /* line 1, ../sass/reset.scss */
-html { color: #000; background: #FFF; }
+html { color: #000; background: #FFF; } //added comment
 
 /* line 1, ../sass/reset.scss */
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td { margin: 0; padding: 0; }
