--- a/reset.css
+++ b/reset.css
@@ -1,5 +1,5 @@
 /* line 1, ../sass/reset.scss */
-html { color: #000; background: #FFF; }
+html { color: red; background: green; }
 
 /* line 1, ../sass/reset.scss */
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td { margin: 0; padding: 0; }
@@ -8,7 +8,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 table { border-collapse: collapse; border-spacing: 0; }
 
 /* line 1, ../sass/reset.scss */
-fieldset, img { border: 0; }
+fieldset, img { border: 1; }
 
 /* line 1, ../sass/reset.scss */
 address, caption, cite, code, dfn, em, strong, th, var, optgroup { font-style: inherit; font-weight: inherit; }
@@ -37,14 +37,14 @@ sup { vertical-align: baseline; }
 /* line 1, ../sass/reset.scss */
 sub { vertical-align: baseline; }
 
+/* line 2, ../sass/reset.scss */
+sub_ { vertical-align: baseline; }
+
 /* line 1, ../sass/reset.scss */
 legend { color: #000; }
 
 /* line 1, ../sass/reset.scss */
 input, button, textarea, select, optgroup, option { font-family: inherit; font-size: inherit; font-style: inherit; font-weight: inherit; }
-
-/* line 1, ../sass/reset.scss */
-input, button, textarea, select { *font-size: 100%; }
 
 /* line 1, ../sass/reset.scss */
 body { font: 13px/1.231 HelveticaNeue, helvetica, arial, clean, sans-serif !important; *font-size: small; *font: x-small; }
